# ansible-collection

./: .gitattributes  .gitignore  .workflow-patcher.yml  AGENTS.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  collection_manifest.py  error_code_config.yml  galaxy.yml  noxconfig.py  noxfile.py  pyproject.toml  release_version.py  requirements.txt
.github/workflows/: build-and-publish.yml  cd-extension.yml  cd.yml  check-release-tag.yml  checks.yml  ci.yml  dependency-update.yml  fast-tests-extension.yml  fast-tests.yml  gh-pages.yml  matrix-all.yml  matrix-exasol.yml  matrix-python.yml  matrix.yml  merge-gate.yml  periodic-validation.yml  pr-merge.yml  publish-ansible-galaxy.yml  report.yml  slow-checks.yml
changelogs/: config.yaml
doc/: conf.py  design_index.md  developer_guide.rst  getting_started.rst  index.rst  system_requirements.md  user_guide.rst
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.3.0.md  changes_1.0.0.md  unreleased.md
doc/changesets/: 100-trace-requirements-and-security-mitigations.md  107-improve-end-user-and-embedded-module-documentation.md  112-add-missing-exasol-grants-scenarios.md  114-canonical-schema-connection-parameter.md  15-add-exasol-info-module.md  38-exact-exasol-identifiers.md  56-implement-e2e-tests-for-exasol-query-and-exasol-user-modules.md  58-document-test-types-in-developer-guide.md  59-add-python-package-integration-tests.md  67-clarify-fqcn-usage-and-module-naming.md  69-security-design-document.md  75-reconcile-security-requirement-with-validate-certs-opt-out.md  79-implement-exasol-script-module.md  81-implement-exasol-schema-module.md  remove-combined-backend-test-dependency.md
doc/design/: building_block_view.md  crosscutting_concepts.md  deployment_view.md  exasol_user_security.rst  glossary.md  quality_requirements.md  runtime_view.md  security_considerations.md
exasol/: __init__.py
exasol/ansible_collection/: __init__.py  runtime.py
exasol/ansible_modules/: __init__.py  common.py  common_identifier_validation.py  common_param_validation.py  common_query.py  common_role.py  common_runtime_import.py  common_schema.py  common_user.py  exasol_grants.py  exasol_info.py  exasol_init.py  exasol_query.py  exasol_role.py  exasol_schema.py  exasol_script.py  exasol_user.py
meta/: ee-bindep.txt  ee-requirements.txt  runtime.yml
plugins/doc_fragments/: connection.py  exasol.py  exasol_query.py
plugins/module_utils/: ansible_runner_wrapper.py  common_runtime_import.py  exasol.py  exasol_query.py  exasol_user.py  runtime.py
plugins/modules/: exasol_grants.py  exasol_info.py  exasol_init.py  exasol_query.py  exasol_role.py  exasol_schema.py  exasol_script.py  exasol_user.py
roles/setup_exasol/: README.md
specs/: README.md  exasol_info.feature  exasol_query.feature  exasol_role.feature  exasol_schema.feature  exasol_user.feature
specs/ansible_modules/: exasol_grants.feature  exasol_info.feature  exasol_init_ansible_modules.feature  exasol_query.feature  exasol_query_ansible_modules.feature  exasol_role.feature  exasol_role_ansible_modules.feature  exasol_schema.feature  exasol_script.feature  exasol_user.feature  exasol_user_ansible_modules.feature
specs/ansible_playbook/: exasol_grants.feature  exasol_info.feature  exasol_init_ansible_playbook.feature  exasol_query.feature  exasol_role.feature  exasol_schema.feature  exasol_script.feature  exasol_user.feature
specs/diagrams/: exasol_init_domain_diagram.md  exasol_init_process_diagram.md
specs/domain/: entity_model_relationship.md  use_cases_diagram.puml
specs/glossary/: exasol_init_glossary.md
test/integration/: conftest.py  integration_common.py  test_acceptance_scenario_contract.py  test_ansible_runner.py  test_connection_fixture_helpers.py  test_galaxy_collection_runtime_contract.py  test_info_integration.py  test_installed_collection_e2e.py  test_non_mocked_exasol_backend.py  test_project_setup.py  test_python_package_integration.py  test_python_package_user_integration.py  test_query_integration.py  test_real_exasol_backend.py  test_role_integration.py  test_user_integration.py
test/unit/: test_acceptance_scenario_contract.py  test_ansible_runner_wrapper.py  test_collection_exasol_module.py  test_collection_manifest.py  test_common_runtime.py  test_common_runtime_import.py  test_exasol_grants_runtime.py  test_exasol_info_runtime.py  test_exasol_init_runtime.py  test_exasol_module_utils.py  test_exasol_query_ansible_modules.py  test_exasol_query_module_utils.py  test_exasol_query_runtime.py  test_exasol_role_runtime.py  test_exasol_runtime.py  test_exasol_schema_runtime.py  test_exasol_script_ansible_modules.py  test_exasol_user_module_utils.py  test_exasol_user_runtime.py  test_integration_backend_setup.py  test_integration_itde_setup.py  test_module_documentation_contract.py  test_plugin_module_runtime_imports.py  test_runtime.py  test_version_consistency.py
tests/sanity/: ignore-2.17.txt  ignore-2.21.txt
(+100 files in other folders)
