[project]
name = "exasol-ansible-modules"
version = "0.2.0"
description = "Python runtime package for Exasol Ansible collection modules."
authors = [
    {name = "Mykhailo Skliar", email = "mykhailo.skliar@exasol.com"},
    {name = "Exasol AG", email = "opensource@exasol.com"},
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["exasol", "ansible", "collection", "database", "data-warehouse"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyexasol",
    "sqlglot>=30.11.0",
]

[dependency-groups]
dev = [
    "ansible>=10.7,<11",
    "exasol-ansible-runner-wrapper>=2,<3",
    "exasol-toolbox>=10.0.0,<11",
    "pytest>=9.0.3,<10.0.0",
    "pytest-exasol-backend>=1.4,<2",
    "pyyaml>=6.0.3,<7.0.0",
    "distlib (>=0.4.3,<0.5.0)", # required for using manifest in galaxy.yml
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [
    { include = "exasol" },
]
include = [
    "README.md",
    "doc/changes/changelog.md",
    "LICENSE",
    "galaxy.yml",
]

[project.urls]
repository = "https://github.com/exasol/ansible-collection"
homepage = "https://github.com/exasol/ansible-collection"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.pytest.ini_options]
python_files = [
    "utest_*.py",
    "itest_*.py",
    "test_*.py",
]
markers = [
    "integration: tests requiring external services, service containers, or Ansible runner workflows",
    "slow: tests that may start Exasol or run full runner workflows",
]

[tool.coverage.report]
# Switch to 15 after code has been added
fail_under = 0

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"
target-version = ["py311"]

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.sonar]
projectKey = "com.exasol:ansible-collection"
host.url = "https://sonarcloud.io"
organization = "exasol"
